1998-07-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Move Sam's 1998-06-16 fix to the right
	place. Fix regressions in ACVC tests.

1998-07-16  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Insert pragma Warnings (On) a little bit later.

1998-07-15  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Add pragma Warnings (Off) to compile s-garela.adb
 	safely.

1998-07-02  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Check for RACW even on non-RCI units.

1998-06-16  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Choose the right termination package depending on
	the context.

1998-06-16  Laurent Pautet  <pautet@dorine.enst.fr>

	* xe_stubs.adb: Force termination to local when light PCS, termination
	not already defined and not main partition.

	* xe_back.adb, xe_back.ads: Add new procedure Set_Termination.

1998-06-16  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Write a with clause for System.Garlic.Types to get 
	the termination types.

1998-06-12  Laurent Pautet <pautet@dorine.enst.fr>

	* xe_stubs.ads, xe_stubs.adb: Spec *and* body of a RCI are now
	marked as RCI in an ali file. This new behaviour arose a
	bug in the version check code.

	* xe_check.adb: We reload ali files after a first step of
	compilation. Unfortunatly, this reload was also done on Ada lib.

1998-06-08  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_utils.adb: (Has_Standard_Extension): new function.
	Do not issue "-x ada" when the file dealt with has a standard (ads 
	or adb) extension.

1998-05-12  Samuel Tardieu  <sam@inf.enst.fr>

	* make-ada-dir: Updated.

	* xe.adb: Remove unused with of ALI.

	* xe_lead.adb: Remove unused with of Namet and Osint.

	* xe_parse.adb: Remove unused with of GNAT.OS_Lib, Osint and Table.

	* xe_scan.adb: Remove unused with of Csets.

	* xe_stubs.adb: Remove unused with of Unchecked_Deallocation.

1998-05-11  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Change Partition_Interface.Startup into